Added console, updated read me, added edit servers, improved performance

--- a/mindworld/dashboard/templates/dashboard/base.html
+++ b/mindworld/dashboard/templates/dashboard/base.html
@@ -30,7 +30,7 @@
                     <!-- Sidebar items -->
                     <ul class="space-y-2">
                         <li>
-                            <a href="{% url 'dashboard_home' %}" class="flex items-center py-2 px-4 bg-gray-900 rounded-md transition-colors duration-300 hover:bg-gray-700">
+                            <a href="{% url 'home' %}" class="flex items-center py-2 px-4 bg-gray-900 rounded-md transition-colors duration-300 hover:bg-gray-700">
                                 <span class="mr-2">
                                     <!-- Icon for Overview -->
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -41,7 +41,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{% url 'dashboard_nodes' %}" class="flex items-center py-2 px-4 bg-gray-900 rounded-md transition-colors duration-300 hover:bg-gray-700">
+                            <a href=""{% url 'nodes' %}"" class="flex items-center py-2 px-4 bg-gray-900 rounded-md transition-colors duration-300 hover:bg-gray-700">
                                 <span class="mr-2">
                                     <!-- Icon for Nodes -->
                                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                     <!-- Logout button -->
-                    <a href="{% url 'user_logout' %}" class="block w-full text-left text-sm text-gray-400 hover:text-white mt-4">Logout</a>
+                    <a href="" class="block w-full text-left text-sm text-gray-400 hover:text-white mt-4">Logout</a>
                 </div>
             </div>
         </div>
